fixed overflow issues

--- a/css/wireframe.css
+++ b/css/wireframe.css
@@ -33,20 +33,21 @@ input{
 .home{
     margin-top: 1%;
     margin-bottom: 1%;
-    height: 80%;
+    height: 86%;
     background-color: black;
 }
 .search{
     display: flex;
-    height: 10%;
+    height: 6%;
 
 }
 .search img{
-    width: 128px;
-    height: 128px;
+    width: 98px;
+    height: 98px;
 }
 .searchResults{
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin-left: auto;
     margin-right: auto;
     width: 97%;
